# picopet

./: .gitignore  AGENTS.md  CLAUDE.md  CODING_STYLE.md  LICENSE  Makefile  PLAN.md  README.md  UI_STYLE.md  VISUAL_STYLE.md  catppuccin.md
backend/: .gitignore  Cargo.toml  Makefile  README.md
frontend/: .gitignore  README.md  eslint.config.js  package.json
